# deb-python-xstatic-tv4

./: .gitignore  .gitreview  MANIFEST.in  setup.cfg  setup.py
debian/: changelog  control  copyright  rules  watch
debian/patches/: Debianize-the-package.patch  series
xstatic/pkg/tv4/: __init__.py
