[metadata]
name = XStatic-tv4
summary = tv4 1.2.7 (XStatic packaging standard)
description-file = README.rst
maintainer = Rob Cresswell
maintainer-email = robert.cresswell@outlook.com
home-page = http://geraintluff.github.com/tv4/
keywords = tv4 xstatic
license = https://github.com/geraintluff/tv4/blob/master/LICENSE.txt
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
